# Cpp_thirdPartyStudy

./: .gitignore  README.md
Protobuf/: read.md
Protobuf/cpp_use/: CMakeLists.txt  add_person.cc  address_book_file  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  list_people.cc
Protobuf/python_use/: my.helloworld.proto  mybuffer.io  reader.py  writer.py
gflags/: CMakeLists.txt  README.md  main.cpp
gflags/include/: test.h
glog/: CMakeLists.txt  README.md  main.cpp
glog/log/: hello_out.ERROR  hello_out.FATAL  hello_out.INFO  hello_out.WARNING  hello_out.nova-chunhui.novauto.log.FATAL.20210908-152754.18174  hello_out.nova-chunhui.novauto.log.FATAL.20210908-153607.20561  hello_out.nova-chunhui.novauto.log.INFO.20210908-150558.15898  hello_out.nova-chunhui.novauto.log.INFO.20210908-152012.17075  hello_out.nova-chunhui.novauto.log.INFO.20210908-152134.17305  hello_out.nova-chunhui.novauto.log.INFO.20210908-152436.17527  hello_out.nova-chunhui.novauto.log.INFO.20210908-152619.17661  hello_out.nova-chunhui.novauto.log.INFO.20210908-152754.18174  hello_out.nova-chunhui.novauto.log.INFO.20210908-153607.20561  hello_out.nova-chunhui.novauto.log.INFO.20210908-153642.20648  hello_out.nova-chunhui.novauto.log.INFO.20210908-153703.20758  hello_out.nova-chunhui.novauto.log.INFO.20210908-153728.20846  hello_out.nova-chunhui.novauto.log.INFO.20210908-153801.20878  hello_out.nova-chunhui.novauto.log.WARNING.20210908-150504.15746  hello_out.nova-chunhui.novauto.log.WARNING.20210908-152012.17075  hello_out.nova-chunhui.novauto.log.WARNING.20210908-152055.17187  (+8 more)
(+1 files in other folders)
